package ar.edu.utn.frba.dds.domain;

public interface Contribucion {
  public float calcularPuntaje();
}
