package ar.edu.utn.frba.dds.domain.adapters;

public interface AdapterMail {

  public void enviar(String mensaje, String correo);

}
