package ar.edu.utn.frba.dds.domain.contacto;

public class Telefono implements MedioDeContacto {

  private String numero;

  @Override
  public void enviar(Mensaje mensaje) {
    //TODO:
  }
}
