package ar.edu.utn.frba.dds.domain.heladeras;

import lombok.Getter;
import lombok.Setter;

public class Modelo {
  private String modelo;
  private float temperaturaMinima;
  private float temperaturaMaxima;
}
