package ar.edu.utn.frba.dds.domain.tecnicos;

import lombok.Getter;
import lombok.Setter;

public class Area {

  @Setter
  @Getter
  private String area;

}
