package ar.edu.utn.frba.dds.domain.ubicacion;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Coordenada {
  String latitud;
  String longitud;
}

