@startuml

' -----------------------------------------

class PersonaHumana {
 - contacto: Contacto
 - direccion: Direccion
 - nombre: String
 - apellido: String
 - documento: Documento
 - fechaNacimiento: LocalDate
 - contribuciones: Set<Contribucion>
 - contribucionesElegidas: Set<FormasContribucionHumanas>
 + calcularPuntajeNeto(): float
}

PersonaHumana --> " * " Contribucion
PersonaHumana --> Contacto
PersonaHumana --> Direccion
PersonaHumana --> Documento
PersonaHumana --> " * " FormasContribucionHumanas
PersonaHumana --> Usuario

' -----------------------------------------

class Vianda {
 - fechaCaducidad: LocalDate
 - entregada: boolean
 - comida: String
 - peso: float
 - fechaDonacion: LocalDate
 + calcularPuntaje(): int
}

Vianda ..|> Contribucion

' -----------------------------------------

class Heladera {
 - nombre: String
 - direccion: Direccion
 - fechaRegistro: LocalDate
 - capacidadMaximaViandas: int
 - activa: boolean
 - modelo: Modelo
 - viandas: Set<Vianda>
 + ingresarViandas(viandas: ...Vianda): void
 + quitarViandas(viandas: ...Vianda): void
 + temperatura(): float
 + calcularPuntaje(): int
}

Heladera --> "*" Vianda
Heladera --> Modelo
Heladera --> Direccion
Heladera ..|> Contribucion

' -----------------------------------------

class Modelo {
 - modelo: String
 - temperaturaMinima: float
 - temperaturaMaxima: float
}

' -----------------------------------------

class DistribucionVianda {
 - heladeraOrigen: Heladera
 - heladeraDestino: Heladera
 - cantidadViandas: int
 - motivo: String
 - fecha: LocalDate
 + distribuir(viandas: List<Vianda>): void
 + calcularPuntaje(): int
}

DistribucionVianda --> Heladera
DistribucionVianda --> Heladera
DistribucionVianda ..> " * " Vianda
DistribucionVianda ..|> Contribucion

' -----------------------------------------

interface Contribucion {
 + calcularPuntaje(): int
}

class DonacionDinero {
 - monto: float
 - frecuencia: Integer
 - unidadFrecuencia: String
 - fecha: LocalDate
 + calcularPuntaje(): int
}

DonacionDinero ..|> Contribucion

note bottom
unidadFrecuencia podría tener los valores:
   S: Semanal
   M: Mensual
   A: Anual
end note

' -----------------------------------------

class Oferta {
 - nombre: String
 - cantidadPuntosNecesarios: float
 - imagen: ???
 - rubro: Rubro
 - organizacion: PersonaJuridica
 - comprador: PersonaHumana
 + canjear(): void
}

Oferta --> PersonaJuridica
Oferta --> Rubro

' -----------------------------------------

class Rubro {
 - nombre: String
}

' -----------------------------------------

class Documento {
 - tipo: TipoDocumento
 - documento: String
}

Documento --> TipoDocumento

' -----------------------------------------

interface MedioDeContacto {
 + enviar(mensaje: Mensaje)
}

MedioDeContacto ..> Mensaje

' -----------------------------------------

class WhatsApp {
 - numero: String
 + enviar(mensaje: Mensaje)
}

WhatsApp ..|> MedioDeContacto

' -----------------------------------------

class Telefono {
 - numero: String
 + enviar(mensaje: Mensaje)
}

Telefono ..|> MedioDeContacto

' -----------------------------------------

class Mail {
 - correo: String
 - adapterMail: AdapterMail
 + enviar(mensaje: Mensaje)
}

Mail ..|> MedioDeContacto
Mail --> AdapterMail

' -----------------------------------------

class AdapterMail {
 + enviar(mensaje: Mensaje, correo: String)
}

' -----------------------------------------

class Tecnico {
 - nombre: String
 - apellido: String
 - documento: Documento
 - cuil: String
 - contacto: Contacto
 - areasDeCobertura: Set<Area>
}

Tecnico --> Contacto
Tecnico --> Area
Tecnico --> Documento
Tecnico --> Usuario

' -----------------------------------------

class Area {
 - nombre: String
}

' -----------------------------------------

class Mensaje {
 - asunto: String
 - cuerpo: String
 - fecha: LocalDateTime
}

' -----------------------------------------

class Contacto {
 - mediosDeContacto: Set<MedioDeContacto>
 + agregarMedioDeContacto(medioDeContacto: MedioDeContacto): void
 + quitarMedioDeContacto(medioDeContacto: MedioDeContacto): void
}

Contacto --> "*" MedioDeContacto

' -----------------------------------------

class Respuesta {
 - pregunta: Pregunta
 - encuestado: PersonaHumana
 - contenido: String
}

Respuesta --> PersonaHumana

' -----------------------------------------

class Pregunta {
 - campo: String
 - activa: boolean
 - opciones: Set<String>
 - tipo: String
}

Pregunta --o Respuesta
note left
Posibles tipos:
   Multiple choice
   Pregunta abierta
end note

' -----------------------------------------

class ReconocimientoTrabajoRealizado {
 - static coeficientes: Map<String, float>
 + calcularPuntaje(contribuciones: Set<Contribucion>): float
}

ReconocimientoTrabajoRealizado ..> " * " Contribucion
note bottom: Los coeficientes se encuentran en un archivo de configuración

' -----------------------------------------

class Tarjeta {
 - codigo: String
 - historialUsos: List<UsoDeTarjeta>
 - titular: PersonaVulnerable
 + calcularPuntaje(): int
}

Tarjeta --> PersonaVulnerable
Tarjeta --> " * " UsoDeTarjeta
Tarjeta ..|> Contribucion

' -----------------------------------------

class UsoDeTarjeta {
 - fecha: LocalDateTime
 - heladera: Heladera
}

UsoDeTarjeta --> Heladera

' -----------------------------------------

class PersonaVulnerable {
 - nombre: String
 - fechaDeNacimiento: LocalDate
 - fechaDeRegistro: LocalDate
 - dirección: String
 - menoresACargo: int
 - documento: Documento
 - donanteQueLoRegistro: PersonaHumana
}

PersonaVulnerable --> PersonaHumana
PersonaVulnerable --> Documento

' -----------------------------------------

class PersonaJuridica {
 - usuario: String
 - contacto: Contacto
 - dirección: Direccion
 - razonSocial: String
 - tipo: TipoPersonaJuridica
 - rubro: Rubro
 - contribucionesElegidas: Set<FormasContribucionJuridicas>
 - heladerasACargo: Set<Heladera>
 - contribuciones: Set<Contribucion>
 + hacerseCargoDeHeladera(heladera: Heladera): void
 + darDeBajaHeladera(heladera: Heladera): void
}

PersonaJuridica --> " * " FormasContribucionJuridica
PersonaJuridica --> Rubro
PersonaJuridica --> Contacto
PersonaJuridica --> Direccion
PersonaJuridica --> "*" Heladera
PersonaJuridica --> TipoPersonaJuridica
PersonaJuridica --> Usuario

' -----------------------------------------

class Direccion {
 - direccion: String
 - coordenada: Coordenada
}

Direccion --> Coordenada

' -----------------------------------------


class Coordenada {
 - latitud: String
 - longitud: String
}

' -----------------------------------------


class AdapterRecomendacionPuntosHeladera {
 + recomendacion(latitud: String, longitud: String, radio: float): Set<Coordenada>
}

AdapterRecomendacionPuntosHeladera ..> " * " Coordenada

' -----------------------------------------


class CargaMasivaColaboraciones {
 - adapterCSV: ??
 + importarArchivoCSV(archivoCSV: File): void
}

' -----------------------------------------

enum FormasContribucionHumanas {
 DISTRIBUCION_VIANDAS
 DONACION_DINERO
 DONACION_VIANDA
 ENTREGA_TARGETAS
}

enum FormasContribucionJuridica {
 DONACION_DINERO
 ENCARGARSE_DE_HELADERA
 OFRECER_OFERTA
}

enum TipoPersonaJuridica {
 GUBERNAMENTAL
 ONG
 EMPRESA
 INSTITUCION
}

enum TipoDocumento {
 LC
 LE
 DNI
}

' -----------------------------------------

class Usuario {
- nombre: String
- clave: String
- rol: Rol
+ cambiarClave(clave: String, validador: ValidadorDeClave): void
}

Usuario --> Rol
Usuario ..> ValidadorDeClave

' -----------------------------------------

class ValidadorDeClave{
- validadores: Set<TipoValidacion>
+ esValido(clave: String): boolean
}

ValidadorDeClave --> " * " TipoValidacion

' -----------------------------------------

interface TipoValidacion{
+ validar(clave: String): boolean
+ getMensajeError(): String
}

' -----------------------------------------

class LongitudEstipulada{
- longitudMaxima: int
- longitudMinima: int
+ validar(clave: String): boolean
+ getMensajeError(): String
}

LongitudEstipulada ..|> TipoValidacion

' -----------------------------------------

class ListaDePeoresClavesMemorizados{
+ validar(clave: String): boolean
+ getMensajeError(): String
}

ListaDePeoresClavesMemorizados ..|> TipoValidacion

' -----------------------------------------

class AusenciaDeCredencialesPorDefecto{
- usuario: Stering
+ validar(clave: String): boolean
+ getMensajeError(): String
}

AusenciaDeCredencialesPorDefecto ..|> TipoValidacion

' -----------------------------------------

class Rol {
- nombre: String
- permiso: Set<Permiso>
+ tenesPermiso(permiso: Permiso): boolean
}

Rol --> " * "Permiso

' -----------------------------------------

class Permiso {
- nombre: String
}

' -----------------------------------------
@enduml